add default name orgs

--- a/public/locales/en/list.json
+++ b/public/locales/en/list.json
@@ -1,6 +1,7 @@
 {
   "List of organization repositories": "List of organization repositories",
   "Enter organization name": "Enter organization name",
+  "Default name": "Enter the name of the organization, e.g.",
   "No results": "No results",
   "Updated": "Updated"
 }
