--- a/public/locales/ru/list.json
+++ b/public/locales/ru/list.json
@@ -1,6 +1,7 @@
 {
   "List of organization repositories": "Список репозиториев организации",
   "Enter organization name": "Введите название организации",
+  "Default name": "Введите название организации, например:",
   "No results": "Не найдено",
   "Updated": "Обновлено"
 }
