--- a/public/locales/ru/list.json
+++ b/public/locales/ru/list.json
@@ -2,6 +2,7 @@
   "List of organization repositories": "Список репозиториев организации",
   "Enter organization name": "Введите название организации",
   "Default name": "Введите название организации, например:",
-  "No results": "Не найдено",
+  "Organization": "Организация",
+  "No results": "не найдена",
   "Updated": "Обновлено"
 }
